<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Schedule+</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_title">Welcome</string>
    <string name="welcome_text">
        Welcome to Schedule+, Please Log In using your registered Email address and Password.
        Click forget password if you lost your password, or register if you are a new user
    </string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="log_in_button">Login</string>
    <string name="log_out_button">Logout</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="register_button">Register</string>
    <string name="forgot_password_text">
        Please enter your registered email address to reset your password
    </string>
	<string name="send_button">Send</string>
	<string name="getting_started_title">Getting Started</string>
	<string name="getting_started_content">unknown</string>
	
	<!-- ini text test doang, nanti dihapus saja -->
	<string name="test_agenda">Ini Tab Agenda</string>
	<string name="test_automsg">Ini Tab AutoMsg</string>
	<string name="test_calendar">Ini Tab Calendar</string>
	<string name="test_event">Ini Tab Event</string>
	<string name="test_setting">Ini Tab Setting</string>
	<!-- ini text test doang, nanti dihapus saja -->
	
	<string name="empty_agenda">You Have No Agenda</string>
	
	<string name="list_image_desc">Arrow symbol for details</string>
	<string name="file_delete_button">Delete file symbol</string>
	
	<!-- deskripsi permission -->
	<string name="desc_permission_read_agenda">Allow apps to read agenda data</string>
	<string name="desc_permission_write_agenda">Allow apps to write agenda data</string>
	<string name="label_permission_read_agenda">Reading agenda data</string>
	<string name="label_permission_write_agenda">Writing agenda data</string>
	
	<!-- Item di action bar -->
	<string name="agenda_add_title">Add</string>
	<string name="agenda_delete_title">Delete</string>
	<string name="agenda_edit_title">Edit</string>
	<string name="agenda_add_file">Attach</string>
	<string name="contact_list">Contact</string>
	<string name="contact_search">Search</string>
	<string name="requests_lists">Requests</string>
	<string name="SMS_add_title">Add</string>
	<string name="SMS_delete_title">Delete</string>
	<string name="SMS_edit_title">Edit</string>
	<string name="event_invite_option">Invite</string>
	
	<!-- Resource string di form add agenda -->
	<string name="add_form_date">Date</string>
	<string name="add_form_title">Title</string>
	<string name="add_form_description">Description</string>
	<string name="add_form_file">File</string>
	<string name="add_agenda_button">Save</string>
	
	<!-- Resource string di form add event -->
	<string name="event_title">Title</string>
	<string name="event_date">Date</string>
	<string name="event_time">Time</string>
	<string name="event_place">Place</string>
	<string name="event_desc">Description</string>
	<string name="event_invite">Invited Friends</string>
	<string name="event_invite_view">Attendance List</string>
	
	<!-- Resource string di activity view SMS -->
	<string name="view_sms_to">To</string>
	<string name="view_sms_date_time">Date/Time</string>
	<string name="view_sms_message">Message</string>
	
	<!-- Dialog text -->
	<string name="OK">OK</string>
	<string name="Yes">Yes</string>
	<string name="Cancel">Cancel</string>
	<string name="Delete_Title_Agenda">Delete Agenda</string>
	<string name="Delete_Text_Agenda">Are you sure you want to delete this agenda?</string>
	<string name="Delete_Title_File">Delete File</string>
	<string name="Delete_Text_File">Are you sure you want to delete this file?</string>
	<string name="Delete_Text_SMS">Are you sure you want to delete this Scheduled Message?</string>
	
	<!-- Resource buat file explorer -->
	<string name="location">Location</string>
    <string name="cant_read_folder">folder can\'t be read!</string>
    <string name="nnew">New</string>
    <string name="select">Select</string>
    <string name="file_name">File name:</string>
    <string name="cancel">Cancel</string>
    <string name="create">Save</string>
    <string name="no_data">No Data</string>
    <color name="gray">#ffff0000</color>
    <string name="err">Error</string>
    
    <!-- Resource Search Bar -->
    <string name="search_label">Search</string>
    <string name="search_hint">Enter Name or Email Address</string>
    <string name="mainParent">com.skripsi.scheduleplus.Main</string>
    <string name="contactListLabel">Contacts</string>
    <string name="signed_in_title">Signed in as </string>
    <string name="display_name_title">Display Name</string>
    <string name="event_label">Event</string>
    <string name="account_label">Account</string>
    <string name="agenda_label">Agenda</string>
    <string name="file_picker_label">Choose File</string>
    <string name="sms_scheduler_label">SMS</string>
    <string name="register_label">Register</string>
    <string name="reminder_label">Reminder</string>
    <string name="about_label">About</string>
    <string name="help_label">Help</string>
    <string name="forgot_password_label">Forgot Password</string>
    <string name="forgot_password_text">Enter yout email address to retrieve your password</string>
    <string name="user_account_label">Account</string>
    <string name="about_text">Schedule+ is a productivity tool that contains 4 main features which are: Agenda , SMS Scheduler, Location Based Reminder and Event Invitation.
        
        Version 1.0</string>
    <string name="loginParent">com.skripsi.scheduleplus.LogIn</string>
    <string name="reminder_form_parent">com.skripsi.scheduleplus.ReminderFormFragment</string>
  
		    
</resources>
