<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/forgot_password_text">
   </TextView>
   
     <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"        
        android:text="@string/email_address">
   </TextView>
        

    <EditText
        android:id="@+id/forgotPassEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"        
        android:ems="10"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/forgotPassButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_button" />

</LinearLayout>