<?xml version="1.0" encoding="utf-8"?>
	<LinearLayout
	     xmlns:android="http://schemas.android.com/apk/res/android" 
	     android:orientation="vertical"
	     android:layout_width="match_parent"
	     android:layout_height="wrap_content">
	        <TextView
	            android:id="@+id/textView1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            android:text="@string/add_form_title"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textStyle="bold" />
	
	        <TextView
	            android:id="@+id/eventTitleTextView"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            />
	
	        <TextView
	            android:id="@+id/textView3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            android:text="@string/add_form_date"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textStyle="bold"  />
	
	        <TextView
	            android:id="@+id/eventDateTextView"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            />
	
	        <TextView
	            android:id="@+id/textViewSekian"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            android:text="@string/event_place"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textStyle="bold"  />
	
	        <TextView
	            android:id="@+id/eventPlaceTextView"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            />
	
	        <TextView
	            android:id="@+id/textView2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            android:text="@string/add_form_description"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textStyle="bold" />
	
	        <TextView
	            android:id="@+id/eventDescriptionTextView"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            android:maxLines="10"
	            android:scrollbars="vertical"
	             />
	
	        <TextView
	            android:id="@+id/textView4"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            android:text="@string/event_invite_view"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textStyle="bold" />
	
	        <ListView
	            android:id="@+id/eventViewListView"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            >
	        </ListView>
	
	</LinearLayout>
