<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     
		<TextView
            android:id="@+id/signedInAsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/signed_in_title" />

        <TextView
            android:id="@+id/signedInEmailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"            
            android:padding="5dp" />

        <TextView
            android:id="@+id/displayNameTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="16sp" 
            android:textStyle="bold"
            android:text="@string/display_name_title" />

        <EditText
            android:id="@+id/displayNameEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:ems="10"
            android:inputType="textPersonName" >
        </EditText>

        <Button
            android:id="@+id/logOutButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_out_button" />

 
</LinearLayout>
