<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
	<LinearLayout 
	     android:orientation="vertical"
	     android:layout_width="match_parent"
	     android:layout_height="wrap_content">
	        <TextView
	            android:id="@+id/textView1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            android:text="@string/add_form_title"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textStyle="bold" />
	
	        <TextView
	            android:id="@+id/agendaTitleTextView"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            />
	
	
	        <TextView
	            android:id="@+id/textView3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            android:text="@string/add_form_date"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textStyle="bold"  />
	
	        <TextView
	            android:id="@+id/agendaDateTextView"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            />
	
	        <TextView
	            android:id="@+id/textView2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            android:text="@string/add_form_description"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textStyle="bold" />
	
	        <TextView
	            android:id="@+id/agendaDescriptionTextView"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            android:maxLines="10"
	            android:scrollbars="vertical"
	             />
	
	        <TextView
	            android:id="@+id/textView4"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            android:text="@string/add_form_file"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textStyle="bold" />
	
	        <ListView
	            android:id="@+id/agendaViewListView"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	             >
	        </ListView>
	
	
	</LinearLayout>
</ScrollView>